resources/sass/layout/_footer.scss
//FOOTER SECTION
.footer {
    * {
        color: $white;
    }

    a:hover {
        color: inherit;
    }
}

.footer-upper {
    background-color: #1b1b1b;
    padding-top: 75px;

    &__menu {
        list-style-type: none;

        li {
            margin-bottom: 15px;

            a {
                font-size: 22px;
            }
        }
    }
}

.footer-middle {
    background-color: #1b1b1b;
    padding: 50px 0;

    .svg-wrap {
        margin: 0 -20px;

        &.draw {
            svg {
                path {
                    stroke-dasharray: 10000;
                    stroke-dashoffset: 10000;
                    animation: drawsvg 8s ease-in;
                    //animation-delay: 1s;
                    animation-fill-mode: forwards;
                }
            }
        }
    }

}

.footer-lower {
    background-color: #363636;

    &__menu {
        margin-left: -25px;
        list-style-type: none;
        display: flex;
        @include flex-center;

        li {
            display: inline-block;

            > a {
                display: inline-block;
                padding: 25px;
            }
        }
    }
}

.social {
    margin-top: 80px;
    text-align: right;

    ul {
        margin-top: 30px;

        li {
            list-style: none;
            margin-left: 20px;
            display: inline-block;

            a {
                color: $white;
                font-size: 2.5em;
                left: 20px;
            }
        }
    }
}


//Back to top styles
.backTopHolder {
    margin: auto;

    .backTopContent {
        width: 150px;
    }

    .backToTop {
        color: $white;
        padding: 27px;
        display: block;
    }
}

